update 32.11.2023 need to sleep

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.port=8080
 
 #=========== main variable ===========
+minio.url=http://localhost:9000
+minio.username=minioadmin
+minio.password=minioadmin
 db.username=
 db.password=
 db.url=r2dbc:postgresql://morgan.myscope.online:5432/data_db
