update 24.11.2023 - try upload FilePart on minIO

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 server.port=8080
 
 #=========== main variable ===========
-minio.url=http://localhost:9000
-minio.username=minioadmin
-minio.password=minioadmin
+minio.bucket=
+minio.url=
+minio.username=
+minio.password=
 db.username=
 db.password=
-db.url=r2dbc:postgresql://morgan.myscope.online:5432/data_db
+db.url=
 #========== config variable ==========
 spring.r2dbc.url=${db.url}
 spring.r2dbc.username=${db.username}
