--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 	</parent>
 	<groupId>lab.fcpsr</groupId>
 	<artifactId>suprime</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>suprime</name>
-	<description>suprime</description>
+	<version>1.0.0</version>
+	<name>supreme</name>
+	<description>supreme</description>
 	<properties>
 		<java.version>17</java.version>
 		<spring-boot-admin.version>3.1.5</spring-boot-admin.version>
@@ -101,7 +101,7 @@
 		<dependency>
 			<groupId>io.minio</groupId>
 			<artifactId>minio</artifactId>
-			<version>8.4.3</version>
+			<version>8.5.2</version>
 		</dependency>
 
 		<dependency>
