--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ db.url=
 spring.r2dbc.url=${db.url}
 spring.r2dbc.username=${db.username}
 spring.r2dbc.password=${db.password}
+spring.sql.init.mode=always
