--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.r2dbc.url=${db.url}
 spring.r2dbc.username=${db.username}
 spring.r2dbc.password=${db.password}
 spring.sql.init.mode=always
+
+spring.codec.max-in-memory-size=500KB
