update: 19-12-2023 (dd-MM-yyyy)
- внесен ряд изменений в плане сохранения данных

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,10 +8,22 @@ minio.password=
 db.username=
 db.password=
 db.url=
+keystore.password=
 #========== config variable ==========
 spring.r2dbc.url=${db.url}
 spring.r2dbc.username=${db.username}
 spring.r2dbc.password=${db.password}
 spring.sql.init.mode=always
 
+#logging.level.io.r2dbc.postgresql.QUERY=DEBUG
+#logging.level.io.r2dbc.postgresql.PARAM=DEBUG
+
 spring.codec.max-in-memory-size=500KB
+
+spring.rsocket.server.port=7000
+
+#server.ssl.keyStore=keystore.p12
+#server.ssl.keyStore-password=${keystore.password}
+#server.ssl.keyStoreType=PKCS12
+#server.ssl.keyAlias=tomcat
+#security.require-ssl=true
