--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,10 +20,10 @@ spring.sql.init.mode=always
 
 spring.codec.max-in-memory-size=500KB
 
-spring.rsocket.server.port=7000
+#spring.rsocket.server.port=7000
 
-#server.ssl.keyStore=keystore.p12
-#server.ssl.keyStore-password=${keystore.password}
-#server.ssl.keyStoreType=PKCS12
-#server.ssl.keyAlias=tomcat
-#security.require-ssl=true
+server.ssl.keyStore=keystore.p12
+server.ssl.keyStore-password=${keystore.password}
+server.ssl.keyStoreType=PKCS12
+server.ssl.keyAlias=tomcat
+security.require-ssl=true
