update: 24-12-2023 (dd-MM-yyyy)
- work has begun on integrating Manticore search into the project
- added a simple profile page

--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
 			<artifactId>minio</artifactId>
 			<version>8.5.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.manticoresearch</groupId>
+			<artifactId>manticoresearch</artifactId>
+			<version>5.0.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
