update 27.12.2023 - add apiClient for ManticoreSearch

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ minio.password=
 db.username=
 db.password=
 db.url=
+manticore.server=
+manticore.table=
 keystore.password=
 #========== config variable ==========
 spring.r2dbc.url=${db.url}
@@ -18,7 +20,7 @@ spring.sql.init.mode=always
 #logging.level.io.r2dbc.postgresql.QUERY=DEBUG
 #logging.level.io.r2dbc.postgresql.PARAM=DEBUG
 
-spring.codec.max-in-memory-size=500KB
+#spring.codec.max-in-memory-size=500KB
 
 #spring.rsocket.server.port=7000
 
