update 28.12.2023 - test update 4

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=433
+server.port=8080
 
 #=========== main variable ===========
 minio.bucket=
@@ -24,8 +24,8 @@ spring.sql.init.mode=always
 
 #spring.rsocket.server.port=7000
 
-server.ssl.keyStore=keystore.p12
-server.ssl.keyStore-password=${keystore.password}
-server.ssl.keyStoreType=PKCS12
-server.ssl.keyAlias=tomcat
-security.require-ssl=true
+#server.ssl.keyStore=keystore.p12
+#server.ssl.keyStore-password=${keystore.password}
+#server.ssl.keyStoreType=PKCS12
+#server.ssl.keyAlias=tomcat
+#security.require-ssl=true
