update 05.02.2024 [dd.MM.yyyy] - ssl off

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ db.password=
 db.url=
 manticore.server=
 manticore.table=
-keystore.password=
+#keystore.password=
 #========== config variable ==========
 spring.r2dbc.url=${db.url}
 spring.r2dbc.username=${db.username}
@@ -24,8 +24,8 @@ spring.sql.init.mode=always
 
 #spring.rsocket.server.port=7000
 
-server.ssl.keyStore=keystore.p12
-server.ssl.keyStore-password=${keystore.password}
-server.ssl.keyStoreType=PKCS12
-server.ssl.keyAlias=tomcat
-security.require-ssl=true
+#server.ssl.keyStore=keystore.p12
+#server.ssl.keyStore-password=${keystore.password}
+#server.ssl.keyStoreType=PKCS12
+#server.ssl.keyAlias=tomcat
+#security.require-ssl=true
