--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=8443
 
 #=========== main variable ===========
 minio.bucket=
@@ -19,13 +19,11 @@ spring.sql.init.mode=always
 
 #logging.level.io.r2dbc.postgresql.QUERY=DEBUG
 #logging.level.io.r2dbc.postgresql.PARAM=DEBUG
-
 #spring.codec.max-in-memory-size=500KB
-
 #spring.rsocket.server.port=7000
 
-#server.ssl.keyStore=keystore.p12
-#server.ssl.keyStore-password=${keystore.password}
-#server.ssl.keyStoreType=PKCS12
-#server.ssl.keyAlias=tomcat
-#security.require-ssl=true
+server.ssl.keyStore=keystore.p12
+server.ssl.keyStore-password=${keystore.password}
+server.ssl.keyStoreType=PKCS12
+server.ssl.keyAlias=tomcat
+security.require-ssl=true
