update: 18-03-2024 (dd-MM-yyyy) keystore and dockerfile updated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ db.password=
 db.url=
 manticore.server=
 manticore.table=
-#keystore.password=
+keystore.password=
 #========== config variable ==========
 spring.r2dbc.url=${db.url}
 spring.r2dbc.username=${db.username}
