update: 18-03-2024 (dd-MM-yyyy) keystore and dockerfile updated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.sql.init.mode=always
 #spring.codec.max-in-memory-size=500KB
 #spring.rsocket.server.port=7000
 
-server.ssl.keyStore=keystore.p12
+server.ssl.keyStore=/keystore/keystore.p12
 server.ssl.keyStore-password=${keystore.password}
 server.ssl.keyStoreType=PKCS12
 server.ssl.keyAlias=tomcat
